--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_IK_URL_ENDPOINT = https://ik.imagekit.io/priyansh/
 VITE_IK_PUBLIC_KEY = public_vz13G9/9J6BsO0iUYX3alHU2mS8=
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_d2VhbHRoeS1yZWRiaXJkLTQyLmNsZXJrLmFjY291bnRzLmRldiQ
